# telegrambot

./: docker-compose.yaml  pyproject.toml
app/: exceptions.py  parser_1.py
app/bot/: alerts.py  config.py  decorators.py  main.py  middleware.py  schemas.py  states.py  variable.py
app/bot/alerts/: main.py
app/bot/commands/: __init__.py  admin.py  check_user_rights.py  keyboards.py  samples.py  user.py
app/db/: client.py  config.py
app/db/dal/: funding.py  user.py
app/db/models/: __init__.py  funding.py  user.py
app/migrations/: env.py
app/migrations/versions/: 22af92e4b68f_creation.py  9113f5531597_database_creation.py
app/parser/: config.py  main.py
app/services/: exceptions.py  user.py
app/templates/: funding.htm
app/tests/: conftest.py  test_service.py
app/utils/: get_text_from_template.py
app/utils/sql/: dal.py
app/worker/: app.py  config.py
