[tool.poetry]
name = "telegrambot"
version = "0.1.0"
description = ""
authors = ["alexey <a556077@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "^5.3.1"}
pydantic = "1.10.9"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
alembic = "^1.11.3"
sqlalchemy = "^2.0.20"
psycopg = "^3.1.10"
websockets = "^11.0.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
